          trying to parse another file, close() it first." errors from the
          Config::Simple module. I'm not sure what was going on really, cured
          this by forcing recreation of the Config::Simple object on reread()
          inside eSTAR::Config. I think this should slove things, it seems
          to have fixed both the race conditions and the flock'ing problem.
          
        * Yuck!  
          
2005-02-14 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: Added email notification of alerts being passed
          to the user agent. Need to move this to the user agent because right
          now obsevration requests that score 0 are still notified.
          
        * bin/jach_agent.pl: Added email notification of alerts being added
          to the UKIRT queue.
          
2005-02-11 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: Modified to trigger on XRT_POS messages rather
          than BAT_POS messages. Now checking soln_status on BAT_POS messages.
          
        * bin/jach_agent.pl: Modified to clean out rejceted messages from the
          state directory. It shouldn't happen, but it appears that sometimes
          they make it in there.
            
2005-02-08 Aladair Allan <aa@astro.ex.ac.uk>

        * Modified UA::Handler and JACH::Handler to deal with the new 
          <Target type="" ident=""></Target> tags generated by the next
          revision of eSTAR::RTML (v1.9.1). We now pass the observation type 
          to the embedded agent via the "ident" attribute rather than the
          "type" attribute. This causes less DTD breakage.
          
2005-02-07 Aladair Allan <aa@astro.ex.ac.uk>


        * bin/gcn_server.pl: Moved TCP/IP server into it's own thread and
          multi-threaded the response on callback. Basic building blocks
          complete, now actually have to write some filtering code.

        * Removed get_reference() from list of routines exported by singleton